-
Bug
-
Resolution: Done
-
P5: Not important
-
4.3.2, 4.7.2, 4.8.0, 5.0.0
-
None
-
Linux
-
ee54ea88fa8e8aa73462d65e327f038753611cc1 4185fc4d8582998661e7380f53458f1a356bcbc5
"foreigh" has been typed instead of "foreign".
just search for "foreigh" in the QSqlRelationalTableModel documentation.
For Gerrit Dashboard: QTBUG-23260 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
30839,1 | Doc: Fix typo foreigh -> foreign | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
30844,1 | Doc: Fix typo foreigh -> foreign | master | qt/qtbase | Status: MERGED | +2 | 0 |