src/sql/models/qsqlrelationaltablemodel.cpp
@@ -363,7 +363,7 @@ void QSqlRelationalTableModelPrivate::clearCache()
 
     The \l{sql/relationaltablemodel} example illustrates how to use
     QSqlRelationalTableModel in conjunction with
-    QSqlRelationalDelegate to provide tables with foreigh key
+    QSqlRelationalDelegate to provide tables with foreign key
     support.
 
     \image relationaltable.png
